--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,6 +13,15 @@
     <artifactId>app-core</artifactId>
 
 <dependencies>
+    <!--Junit-->
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+
+
     <!-- Logging with SLF4J & LogBack -->
     <dependency>
         <groupId>org.slf4j</groupId>
