--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <module>app-repository-api</module>
         <module>app-repository</module>
         <module>core</module>
+        <module>app-service</module>
+        <module>app-service-api</module>
+        <module>rest</module>
     </modules>
     <name>Simple department management</name>
     <packaging>pom</packaging>
