--- a/app-model/pom.xml
+++ b/app-model/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>app-model</artifactId>
-
+<dependencies>
+    <!--JSON-->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.8.4</version>
+    </dependency>
+</dependencies>
 
 </project>
