--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -40,17 +40,9 @@
         </exclusions>
     </dependency>
 
-    <!--JSON-->
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>2.8.4</version>
-    </dependency>
-
-
     <dependency>
         <groupId>org.springframework</groupId>
-        <artifactId>spring-webmvc</artifactId>
+        <artifactId>spring-context</artifactId>
         <version>4.3.2.RELEASE</version>
     </dependency>
 
@@ -59,5 +51,49 @@
         <artifactId>spring-web</artifactId>
         <version>4.3.2.RELEASE</version>
     </dependency>
+
+
+
+    <!--JSON-->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.8.4</version>
+    </dependency>
+
+
+
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>4.3.2.RELEASE</version>
+        <scope>test</scope>
+    </dependency>
+
+
+
+
+
+
+
+
+    <!--Web-->
+    <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-servlet-api</artifactId>
+        <version>8.0.33</version>
+        <scope>provided</scope>
+    </dependency>
+
+
+
+
+
 </dependencies>
 </project>
