--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -60,6 +60,18 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.8.4</version>
     </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-hibernate5</artifactId>
+        <version>2.8.4</version>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-jsr310</artifactId>
+        <version>2.8.4</version>
+    </dependency>
+
+
 
 
 
@@ -90,6 +102,37 @@
         <version>8.0.33</version>
         <scope>provided</scope>
     </dependency>
+
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>4.3.2.RELEASE</version>
+        <scope>test</scope>
+    </dependency>
+
+
+
+
+
+
+
+
+
+
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-ehcache</artifactId>
+        <version>5.2.2.Final</version>
+    </dependency>
+
+
+
+
+
+
+
+
+
 
 
 
