--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -119,11 +119,11 @@
 
 
 
-    <dependency>
+<!--    <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-ehcache</artifactId>
         <version>5.2.2.Final</version>
-    </dependency>
+    </dependency>-->
 
 
 
