--- a/app-model/pom.xml
+++ b/app-model/pom.xml
@@ -17,6 +17,16 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.8.4</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>4.3.2.RELEASE</version>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-jsr310</artifactId>
+        <version>2.8.2</version>
+    </dependency>
 </dependencies>
 
 </project>
