--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>app-service</module>
         <module>app-service-api</module>
         <module>rest</module>
+        <module>app-web</module>
     </modules>
     <name>Simple department management</name>
     <packaging>pom</packaging>
