--- a/app-repository/pom.xml
+++ b/app-repository/pom.xml
@@ -29,7 +29,7 @@
 
 
         <!-- Spring -->
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <exclusions>
@@ -38,7 +38,7 @@
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
@@ -65,6 +65,7 @@
             <version>4.3.2.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
 
