--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -72,7 +72,27 @@
     </dependency>
 
 
+    <!-- Logging with SLF4J & LogBack -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+        <scope>compile</scope>
+    </dependency>
 
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>${slf4j.version}</version>
+        <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+        <scope>runtime</scope>
+    </dependency>
 
 
     <dependency>
@@ -87,7 +107,6 @@
         <version>4.3.2.RELEASE</version>
         <scope>test</scope>
     </dependency>
-
 
 
 
