--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -27,6 +27,12 @@
         <version>1.0-SNAPSHOT</version>
     </dependency>
 
+    <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>app-repository</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+
 
     <dependency>
         <groupId>org.springframework</groupId>
