--- a/app-web/pom.xml
+++ b/app-web/pom.xml
@@ -15,6 +15,14 @@
     <!-- Logging -->
     <logback.version>1.1.7</logback.version>
     <slf4j.version>1.7.21</slf4j.version>
+
+
+    <!--webjars-->
+    <webjars-bootstrap.version>3.3.7-1</webjars-bootstrap.version>
+    <webjars-jquery.version>2.2.4</webjars-jquery.version>
+    <webjars-datetimepicker.version>2.4.7</webjars-datetimepicker.version>
+    <webjars-noty.version>2.3.8</webjars-noty.version>
+    <webjars-datatables.version>1.10.12-1</webjars-datatables.version>
 </properties>
 
     <dependencies>
@@ -90,6 +98,41 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.8.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+
+        <!-- Webjars (static dependencies distributed as JAR files) -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>${webjars-bootstrap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>${webjars-jquery.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>datetimepicker</artifactId>
+            <version>${webjars-datetimepicker.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>noty</artifactId>
+            <version>${webjars-noty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>datatables</artifactId>
+            <version>${webjars-datatables.version}</version>
+        </dependency>
+
 
     </dependencies>
 </project>
