--- a/app-model/pom.xml
+++ b/app-model/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>app-model</artifactId>
 <dependencies>
+
+
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>4.3.2.RELEASE</version>
+    </dependency>
+
     <!--JSON-->
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
