--- a/app-service-api/pom.xml
+++ b/app-service-api/pom.xml
@@ -16,6 +16,16 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>app-model</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
