--- a/app-service-api/pom.xml
+++ b/app-service-api/pom.xml
@@ -20,11 +20,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.3.2.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>4.3.2.RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
