--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -25,6 +25,7 @@
         <groupId>${project.groupId}</groupId>
         <artifactId>app-service</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <scope>provided</scope>
     </dependency>
 
     <dependency>
