--- a/app-service-client/pom.xml
+++ b/app-service-client/pom.xml
@@ -21,6 +21,17 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>app-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rest</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>app-repository</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!--JSON-->
         <dependency>
@@ -51,11 +62,11 @@
 
 
         <!-- https://mvnrepository.com/artifact/org.easymock/easymock -->
-        <dependency>
+ <!--       <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
             <version>3.4</version>
-        </dependency>
+        </dependency>-->
 
 
         <dependency>
@@ -83,12 +94,12 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>com.mrigor.testTasks</groupId>
             <artifactId>rest</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
 
 
 
