refactor global optim

--- a/app-service-client/pom.xml
+++ b/app-service-client/pom.xml
@@ -25,6 +25,12 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>rest</artifactId>
             <version>1.0-SNAPSHOT</version>
+       <exclusions>
+           <exclusion>
+               <groupId>${project.groupId}</groupId>
+               <artifactId>app-service</artifactId>
+           </exclusion>
+       </exclusions>
         </dependency>
 
         <dependency>
