--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -25,7 +25,7 @@
         <groupId>${project.groupId}</groupId>
         <artifactId>app-service</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <scope>provided</scope>
+<!--        <scope>provided</scope>-->
     </dependency>
 
     <dependency>
