--- a/app-service-client/pom.xml
+++ b/app-service-client/pom.xml
@@ -21,7 +21,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>app-core</artifactId>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>rest</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -31,13 +31,13 @@
                <artifactId>app-service</artifactId>
            </exclusion>
        </exclusions>
-        </dependency>
+        </dependency>-->
 
-        <dependency>
+<!--        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>app-repository</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
 
         <!--JSON-->
         <dependency>
@@ -93,12 +93,12 @@
             <version>4.3.2.RELEASE</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
             <version>4.3.2.RELEASE</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
 
 <!--        <dependency>
             <groupId>com.mrigor.testTasks</groupId>
@@ -110,7 +110,7 @@
 
 
         <!--Web-->
-        <dependency>
+<!--        <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
             <version>8.0.33</version>
@@ -122,7 +122,7 @@
             <artifactId>spring-orm</artifactId>
             <version>4.3.2.RELEASE</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
 
 
 
