--- a/app-web/pom.xml
+++ b/app-web/pom.xml
@@ -70,11 +70,11 @@
             <artifactId>app-service-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>-->
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.3.2.RELEASE</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -117,11 +117,11 @@
             <artifactId>jquery</artifactId>
             <version>${webjars-jquery.version}</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>datetimepicker</artifactId>
             <version>${webjars-datetimepicker.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>noty</artifactId>
