--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -53,11 +53,11 @@
         <version>4.3.2.RELEASE</version>
     </dependency>
 
-    <dependency>
+<!--    <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
         <version>4.3.2.RELEASE</version>
-    </dependency>
+    </dependency>-->
 
 
 
@@ -129,12 +129,12 @@
         <scope>provided</scope>
     </dependency>
 
-    <dependency>
+<!--    <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-orm</artifactId>
         <version>4.3.2.RELEASE</version>
         <scope>test</scope>
-    </dependency>
+    </dependency>-->
 
 
 
