--- a/app-repository/pom.xml
+++ b/app-repository/pom.xml
@@ -12,21 +12,12 @@
     <artifactId>app-repository</artifactId>
 
     <dependencies>
-
-
         <dependency>
             <groupId>com.mrigor.testTasks</groupId>
             <artifactId>app-model</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.mrigor.testTasks</groupId>
-            <artifactId>app-core</artifactId>
-        </dependency>
-
-
-
-
+        <!--Spring-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
@@ -38,23 +29,33 @@
             <artifactId>hsqldb</artifactId>
         </dependency>
 
-        <!--Junit-->
+        <!--Test-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>4.3.2.RELEASE</version>
             <scope>test</scope>
         </dependency>
 
-
+        <!-- Logging with SLF4J & LogBack -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
-
 </project>
