--- a/app-web/pom.xml
+++ b/app-web/pom.xml
@@ -12,69 +12,22 @@
     <artifactId>app-web</artifactId>
     <packaging>war</packaging>
 <properties>
-    <!-- Logging -->
-    <logback.version>1.1.7</logback.version>
-    <slf4j.version>1.7.21</slf4j.version>
 
-
-    <!--webjars-->
-    <webjars-bootstrap.version>3.3.7-1</webjars-bootstrap.version>
-    <webjars-jquery.version>2.2.4</webjars-jquery.version>
-    <webjars-datetimepicker.version>2.4.7</webjars-datetimepicker.version>
-    <webjars-noty.version>2.3.8</webjars-noty.version>
-    <webjars-datatables.version>1.10.12-1</webjars-datatables.version>
 </properties>
 
     <dependencies>
 
 
-        <!-- Logging with SLF4J & LogBack -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-            <scope>runtime</scope>
-        </dependency>
 
 
-<!--        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>app-core</artifactId>
-        </dependency>-->
 
-<!--        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>app-model</artifactId>
-        </dependency>-->
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>app-service-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-<!--        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>app-service-client</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>-->
-<!--        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>4.3.2.RELEASE</version>
-        </dependency>-->
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -83,7 +36,7 @@
 
 
         <!--JSON-->
-        <dependency>
+<!--        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.8.4</version>
@@ -97,14 +50,7 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.8.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
-        </dependency>
-
+        </dependency>-->
 
         <!-- Webjars (static dependencies distributed as JAR files) -->
         <dependency>
@@ -117,11 +63,7 @@
             <artifactId>jquery</artifactId>
             <version>${webjars-jquery.version}</version>
         </dependency>
-<!--        <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>datetimepicker</artifactId>
-            <version>${webjars-datetimepicker.version}</version>
-        </dependency>-->
+
         <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>noty</artifactId>
@@ -132,13 +74,20 @@
             <artifactId>datatables</artifactId>
             <version>${webjars-datatables.version}</version>
         </dependency>
+
+        <!--web-->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
             <version>9.0.0.M9</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 
-
+        <!--test-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -150,6 +99,26 @@
             <artifactId>spring-test</artifactId>
             <version>4.3.2.RELEASE</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Logging with SLF4J & LogBack -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 </project>
