--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -13,32 +13,20 @@
     <packaging>war</packaging>
 
 <dependencies>
-<!--    <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>app-core</artifactId>
-    </dependency>-->
-<!--    <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>app-repository</artifactId>
-    </dependency>-->
+
     <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>app-service</artifactId>
-        <version>1.0-SNAPSHOT</version>
-<!--        <scope>provided</scope>-->
     </dependency>
-
     <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>app-repository</artifactId>
-        <version>1.0-SNAPSHOT</version>
     </dependency>
 
-
+     <!--Spring-->
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
-        <version>${spring.version}</version>
         <exclusions>
             <exclusion>
                 <groupId>commons-logging</groupId>
@@ -46,22 +34,24 @@
             </exclusion>
         </exclusions>
     </dependency>
-
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
-        <version>4.3.2.RELEASE</version>
     </dependency>
 
-<!--    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-        <version>4.3.2.RELEASE</version>
-    </dependency>-->
+    <!--Web-->
+    <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-servlet-api</artifactId>
+        <scope>provided</scope>
+    </dependency>
+
+
 
 
 
     <!--JSON-->
+    <!--
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
@@ -76,93 +66,34 @@
         <groupId>com.fasterxml.jackson.datatype</groupId>
         <artifactId>jackson-datatype-jsr310</artifactId>
         <version>2.8.4</version>
-    </dependency>
-
-
-    <!-- Logging with SLF4J & LogBack -->
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
-        <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>jcl-over-slf4j</artifactId>
-        <version>${slf4j.version}</version>
-        <scope>runtime</scope>
-    </dependency>
-
-    <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>${logback.version}</version>
-        <scope>runtime</scope>
-    </dependency>
-
+    </dependency>-->
 
     <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.12</version>
         <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
-        <version>4.3.2.RELEASE</version>
         <scope>test</scope>
     </dependency>
 
-
-
-
-
-
-
-    <!--Web-->
+    <!-- Logging with SLF4J & LogBack -->
     <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-servlet-api</artifactId>
-        <version>8.0.33</version>
-        <scope>provided</scope>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <scope>compile</scope>
     </dependency>
-
-<!--    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-orm</artifactId>
-        <version>4.3.2.RELEASE</version>
-        <scope>test</scope>
-    </dependency>-->
-
-
-
-
-
-
-
-
-
-
-<!--    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-ehcache</artifactId>
-        <version>5.2.2.Final</version>
-    </dependency>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <scope>runtime</scope>
+    </dependency>
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <scope>runtime</scope>
+    </dependency>
 </dependencies>
 </project>
