--- a/server-Rest/pom.xml
+++ b/server-Rest/pom.xml
@@ -83,17 +83,17 @@
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <scope>compile</scope>
+<!--        <scope>compile</scope>-->
     </dependency>
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jcl-over-slf4j</artifactId>
-        <scope>runtime</scope>
+<!--        <scope>runtime</scope>-->
     </dependency>
     <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <scope>runtime</scope>
+<!--        <scope>runtime</scope>-->
     </dependency>
 </dependencies>
 </project>
