--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
 
-        <module>model</module>
         <module>repository</module>
         <module>service-API</module>
         <module>service-RepositoryClient</module>
         <module>service-RestClient</module>
         <module>server-Rest</module>
         <module>server-Web</module>
+        <module>modelD</module>
 
     </modules>
     <name>Simple department management</name>
@@ -63,7 +63,7 @@
         <dependencies>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>model</artifactId>
+                <artifactId>modelD</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
