--- a/service-RestClient/pom.xml
+++ b/service-RestClient/pom.xml
@@ -58,5 +58,9 @@
             <artifactId>logback-classic</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-servlet-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
