--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>server-Rest</module>
         <module>server-Web</module>
         <module>modelD</module>
+        <module>testutil</module>
 
     </modules>
     <name>Simple department management</name>
@@ -61,6 +62,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>testUtil</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>modelD</artifactId>
