--- a/server-Rest/pom.xml
+++ b/server-Rest/pom.xml
@@ -22,6 +22,10 @@
         <groupId>${project.groupId}</groupId>
         <artifactId>repository</artifactId>
     </dependency>
+    <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>testUtil</artifactId>
+    </dependency>
 
      <!--Spring-->
     <dependency>
@@ -68,7 +72,7 @@
         <version>2.8.4</version>
     </dependency>-->
 
-    <dependency>
+<!--    <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <scope>test</scope>
@@ -77,7 +81,7 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
         <scope>test</scope>
-    </dependency>
+    </dependency>-->
 
     <!-- Logging with SLF4J & LogBack -->
     <dependency>
