--- a/service-RepositoryClient/pom.xml
+++ b/service-RepositoryClient/pom.xml
@@ -21,18 +21,13 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>service-API</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>testUtil</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-        <!--Test-->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+
 
         <!-- Logging with SLF4J & LogBack -->
         <dependency>
