--- a/service-RestClient/pom.xml
+++ b/service-RestClient/pom.xml
@@ -16,6 +16,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>service-API</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>testUtil</artifactId>
+            <scope>test</scope>
+        </dependency>
 
 
         <!--Spring-->
