--- a/server-Web/pom.xml
+++ b/server-Web/pom.xml
@@ -80,6 +80,12 @@
 
 
         <dependency>
+            <groupId>com.mangofactory</groupId>
+            <artifactId>swagger-springmvc</artifactId>
+            <version>0.5.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>testUtil</artifactId>
             <scope>test</scope>
