--- a/server-soap/pom.xml
+++ b/server-soap/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>server-Soap</artifactId>
+    <artifactId>server-soap</artifactId>
     <packaging>war</packaging>
 
 
