--- a/server-web/pom.xml
+++ b/server-web/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>server-Web</artifactId>
+    <artifactId>server-web</artifactId>
     <packaging>war</packaging>
 
 
