--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-API</artifactId>
+    <artifactId>service-api</artifactId>
 
     <dependencies>
         <dependency>
